...
    fileprivate lazy var tabsButton: UIButton = {
        let tabsButton = ToolbarButton()
        tabsButton.tintColor = UIColor(rgb: 0x272727)
        tabsButton.unselectedTintColor  = UIColor(rgb: 0x272727)
        tabsButton.setImage(UIImage.templateImageNamed("nav-menu"), for: .normal)
        tabsButton.addTarget(self, action: #selector(URLBarView.SELdidClickAddTab), for: .touchUpInside)
        tabsButton.accessibilityIdentifier = "URLBarView.tabsButton"
        return tabsButton
    }()

    fileprivate lazy var progressBar: GradientProgressBar = {
        let progressBar = GradientProgressBar()
        progressBar.clipsToBounds = false
...
    var bookmarkButton: UIButton = ToolbarButton()
    var forwardButton: UIButton = ToolbarButton()
    var stopReloadButton: UIButton = ToolbarButton()

    var backButton: UIButton = {
        let backButton = ToolbarButton()
        backButton.accessibilityIdentifier = "URLBarView.backButton"
        return backButton
    }()

    lazy var actionButtons: [UIButton] = [self.shareButton, self.menuButton, self.forwardButton, self.backButton, self.stopReloadButton]

    fileprivate var rightBarConstraint: Constraint?
...
    }

    func tabLocationViewDidTapLocation(_ tabLocationView: TabLocationView) {
        var locationText = delegate?.urlBarDisplayTextForURL(locationView.url as URL?)

        // Make sure to use the result from urlBarDisplayTextForURL as it is responsible for extracting out search terms when on a search page
        if let text = locationText, let url = URL(string: text), let host = url.host, AppConstants.MOZ_PUNYCODE {
            locationText = url.absoluteString.replacingOccurrences(of: host, with: host.asciiHostToUTF8())
        }
        enterOverlayMode(locationText, pasted: false)
    }

    func tabLocationViewDidLongPressLocation(_ tabLocationView: TabLocationView) {
...
