...
    }()

    // This has to be here since init() calls it
    fileprivate override init(frame: CGRect) {
        // And these have to be initialized in here or the compiler will get angry
        backButton = ToolbarButton()
        backButton.accessibilityIdentifier = "TabToolbar.backButton"
        forwardButton = ToolbarButton()
        forwardButton.accessibilityIdentifier = "TabToolbar.forwardButton"
        stopReloadButton = ToolbarButton()
        stopReloadButton.accessibilityIdentifier = "TabToolbar.stopReloadButton"
        shareButton = ToolbarButton()
        shareButton.accessibilityIdentifier = "TabToolbar.shareButton"
...
